Improve `readme.md` and change 'docker-compose.yml'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   web:
-    build: .
+    image: qaws-app
     volumes:
       - .:/code
     ports:
